blind review added

--- a/wsd_part1/krctran.sty
+++ b/wsd_part1/krctran.sty
@@ -7,7 +7,7 @@
 
 \ProcessOptions
 
-\RequirePackage[cp1251]{inputenc} % набор текста в кодировке WIN-1251
+%\RequirePackage[cp1251]{inputenc} % набор текста в кодировке WIN-1251
 \RequirePackage[T2A]{fontenc} % кириллическая "внутренняя" кодировка
 \RequirePackage{amssymb}
 \RequirePackage{amsmath} % для принятых в AMS символов в формулах
@@ -18,7 +18,7 @@
 \RequirePackage{array} % таблицы
 %\RequirePackage{theorem} % теоремоподобные окружения
 \RequirePackage[all]{xy} % для рисования xy-pict
-\RequirePackage{graphicx}
+%\RequirePackage{graphicx}
 \RequirePackage[a4paper,twoside,hmargin={21.5mm,21.5mm},vmargin={25mm,29mm}]{geometry}
 \RequirePackage{multicol} % для печати в две колонки и динамического переключения
 \RequirePackage{float} % для поддержки печати рисунков сквозь все колонки
