Добавил обзор Татьяны и Юлии

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -27,8 +27,8 @@
 \rustitle{Обзор методов и алгоритмов разрешения \newline лексической многозначности: Введение}
 \engtitle{Word-sense disambiguation methods and algorithms review: Introduction}
 
-\rusauthor{Т.~В.~Каушинис$^2$,  А.~Н.~Кириллов$^1$,  Н.~И.~Коржицкий$^2$, А.~А.~Крижановский$^1$, А.~В.~Пилинович$^2$, И.~А.~Сихонина$^2$,  А.~М.~Спиркова$^2$, В.~Г.~Старкова$^1$, С.~С.~Ткач$^2$,  А.~Л.~Чухарев$^1$,  Д.~С.~Шорец$^2$,  Д.~Ю.~Янкевич$^2$, Е.~А.~Ярышкина$^2$}
-\engauthor{T.~V.~Kaushinis$^2$, A.~N.~Kirillov$^1$, N.~I.~Korzhitsky$^2$, A.~A.~Krizhanovsky$^1$, A.~V.~Pilinovich$^2$, I.~A.~Sikhonina$^2$, A.~M.~Spirkova$^2$, V.~G.~Starkova$^1$, S.~S.~Tkach$^2$,  A.~L.~Chuharev$^1$, D.~S.~Shorets$^2$, D.~Y.~Yankevich$^2$, E.~A.~Yaryshkina$^2$}
+\rusauthor{Т.~В.~Каушинис$^2$,  А.~Н.~Кириллов$^1$,  Н.~И.~Коржицкий$^2$, А.~А.~Крижановский$^1$, А.~В.~Пилинович$^2$, И.~А.~Сихонина$^2$,  А.~М.~Спиркова$^2$, В.~Г.~Старкова$^1$, Т.~В.~Степкина$^2$, С.~С.~Ткач$^2$, Ю.~В.~Чиркова$^1$, А.~Л.~Чухарев$^1$,  Д.~С.~Шорец$^2$,  Д.~Ю.~Янкевич$^2$, Е.~А.~Ярышкина$^2$}
+\engauthor{T.~V.~Kaushinis$^2$, A.~N.~Kirillov$^1$, N.~I.~Korzhitsky$^2$, A.~A.~Krizhanovsky$^1$, A.~V.~Pilinovich$^2$, I.~A.~Sikhonina$^2$, A.~M.~Spirkova$^2$, V.~G.~Starkova$^1$, T.~V.~Stepkina$^2$, S.~S.~Tkach$^2$, J.~V.~Chirkova$^1$, A.~L.~Chuharev$^1$, D.~S.~Shorets$^2$, D.~Y.~Yankevich$^2$, E.~A.~Yaryshkina$^2$}
 
 
 \organization{$^1$Институт прикладных математических исследований Карельского научного центра РАН \\
@@ -43,8 +43,7 @@ $^2$Петрозаводский Государственный Универси
 (3) методы, использующие внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии). 
 Статья распространяется на правах свободной лицензии “CC Attribution”.
 }
-\engabstract{This paper gives a brief overview of word-sense disambiguation methods and algorithms. 
-}
+\engabstract{The word sense disambiguation (WSD) task is the classification task, where the goal is to predict the meaning of words and phrases with the help of surrounding text. The purpose of this short review is to acquaint the reader with the general directions of word sense disambiguation methods and algorithms. The paper consists of three main parts: (1) supervised (machine learning) approaches to WSD, (2) unsupervised approaches based on unlabeled corpora and (3) knowledge-based approaches to WSD, where machine-readable dictionaries, thesauri, ontologies are used. This work is licensed under the CC Attribution license.}
 
 \ruskeywords{алгоритм, метод, разрешение лексической многозначности.}
 \engkeywords{algorithm, method, word-sense disambiguation.}
@@ -84,6 +83,8 @@ $^2$Петрозаводский Государственный Универси
 \end{itemize}
 
 Также применяются комбинации этих методов.
+
+На сегодняшний день на русском языке нет, по-видимому, достаточно объёмных и серьёзных обзоров по разрешению многозначности. Наиболее полное описание истории развития методов (20 страниц) есть в диссертации Д. Ю. Турдакова \cite{Trudakov 2010}. Такое положение дел послужило одной из причин написания этой статьи, которая послужит заделом для полновесного обзора по данной теме.
 
 Далее будут представлены примеры методов и алгоритмов разрешения лексической многозначности (1) с использованием машинного обучения, (2) без машинного обучения и (3) методы, основанные на знаниях. Данная статья является <<введением>> в проблематику WSD, поскольку эта тема является чрезвычайно обширной и существуют сотни интересных работ по каждому из указанных направлений.
 
@@ -190,7 +191,66 @@ total & 2368\\
 
 \textbf{Топология сети.} Целевое слово представлено  узлом, соединенным активирующими  связями со смысловыми узлами, представляющими все возможные значения слова, имеющиеся  в словарных статьях. Каждый смысловой узел, в свою очередь, соединен  активирующими  связями с узлами, представляющими  слова в словарной статье, соответствующей толкованию данного значения. Процесс соединения повторяется многократно, создавая сверхбольшую сеть взаимосвязанных узлов. В идеале сеть может содержать весь словарь. Авторы, по практическим соображениям, ограничиваются несколькими тысячами узлов и 10–20 тысячами соединений. Слова представлены своими леммами (каноническими формами). Узлы, представляющие различные значения данного слова, соединены запрещающими (inhibitory) связями.  
 
-\textbf{Алгоритм.} При запуске сети первыми активируются узлы входного  слова  (согласно принятой кодировке). Затем  каждый  входной узел посылает активирующий сигнал своим смысловым узлам, с которыми он соединен. В результате  сигналы распространяются по всей сети в течение определенного числа циклов. В каждом цикле узлы слова и  его значений получают обратные сигналы от узлов, соединенных с ними. Узлы конкурирующих значений посылают взаимно подавляющие сигналы.  Взаимодействие  сигналов  обратной  связи  и  подавления,  в соответствии со стратегией <<победитель получает все>>, позволяет увеличить активацию узлов-слов и соответствующих им правильных узлов-значений,  одновременно  уменьшая  активацию  узлов,  соответствующих неправильным значениям. После нескольких десятков  циклов сеть стабилизируется  в  состоянии, в котором активированы  только узлы-значения с наиболее активированными связями  с    узлами-словами. При обучении сети  используется  метод  обратного  распространения (\textit{back  propagation}).    
+\textbf{Алгоритм.} При запуске сети первыми активируются узлы входного  слова  (согласно принятой кодировке). Затем  каждый  входной узел посылает активирующий сигнал своим смысловым узлам, с которыми он соединен. В результате  сигналы распространяются по всей сети в течение определенного числа циклов. В каждом цикле узлы слова и  его значений получают обратные сигналы от узлов, соединенных с ними. Узлы конкурирующих значений посылают взаимно подавляющие сигналы.  Взаимодействие  сигналов  обратной  связи  и  подавления,  в соответствии со стратегией <<победитель получает все>>, позволяет увеличить активацию узлов-слов и соответствующих им правильных узлов-значений,  одновременно  уменьшая  активацию  узлов,  соответствующих неправильным значениям. После нескольких десятков  циклов сеть стабилизируется  в  состоянии, в котором активированы  только узлы-значения с наиболее активированными связями  с    узлами-словами. При обучении сети  используется  метод  обратного  распространения (\textit{back  propagation}).
+
+\section{Краткое введение в бустинг}
+
+\begin{flushright}
+\textit{Т. Степкина, Ю. В. Чиркова}
+\end{flushright} 
+
+В статье \cite{Freund 1999} говорится о бустинге --- общем методе улучшения точности алгоритма обучения. В работе приводится алгоритм AdaBoost с описанием необходимой теории бустинга, а также показывается связь с методом опорных векторов и объясняются причины, по которым переобучение не влияет на бустинг.  
+
+Бустинг --- это общий и доказуемо-эффективный метод получения очень точного правила предсказания путем комбинирования грубых и умеренно неточных эмпирических правил \cite{Freund 1999}. Метод бустинга разработан на основе модели обучения "PAC" (probably approximately correct learning).
+
+Алгоритм AdaBoost был предложен в 1995 году Фройндом и Шапиро \cite{Freund 1996}. В нём исправлены многие недостатки предыдущих алгоритмов бустинга.
+
+AdaBoost является адаптивным алгоритмом \cite{Freund 1999}, поскольку он может адаптироваться к уровням ошибок отдельных слабых гипотез. В названии "Ada" является сокращением от «adaptive» (адаптивный).
+
+На вход алгоритма поступает обучающая выборка $(x_i;y_i);..;(x_m;y_m)$, где каждый элемент $x_i$ принадлежит некоторому домену или признаковому пространству $X$, и каждая метка $y_i$ принадлежит некоторому набору меток $Y$. Для каждого обучающего примера $i$ вес распределения для целых $t$ обозначается $D_t$ $(i)$, где $t$ --- это шаг алгоритма. За начальное распределение весов принимается $D_1$ $(i)= 1/m$. Пусть метки принимают значения из множества  $Y=\{-1,1\}$. 
+
+Далее на каждом шаге $t$, где $t = 1 \ldots T$, выполняется обучение слабого обучаемого с использованием текущего распределения $D_t$, после чего строится слабая гипотеза $h_t: X \to \{-1; 1\}$ с ошибкой первого рода $\epsilon_t=\Sigma_{(i:h_t (x_i)\ne y_i)}D_t(i)$, по которой выбирается уровень значимости $\alpha_t=\frac{1}{2}ln(\frac{1-\epsilon_t}{\epsilon_t})$ и строится новое распределение для следующего шага
+\bfullwidth
+\begin{equation*}
+D_{t+1}(i)=\frac{D_{t^i}}{Z_t} \times 
+\begin{cases}
+e^{-\alpha t}\text{, если }h_t (x_i) = y_i \\
+e^{\alpha t}\text{, если }h_t (x_i)\ne y_i
+\end{cases}
+= \frac{D_t (i)exp(-\alpha_t y_i h_t (x_i))}{Z_t} 
+\end{equation*}
+\efullwidth
+
+Конечная гипотеза $H(x)$ ---  это среднее из большинства решений $T$ слабых гипотез, где $\alpha_t$ --- вес, присвоенный гипотезе $h_t$.
+
+\bfullwidth
+\begin{equation*}
+H(x)=sign(\sum_{t=1}^T\alpha_t h_t(x))
+\end{equation*}
+\efullwidth
+
+Идея алгоритма заключается в выборе набора весов для обучающей выборки. Первоначально все веса примеров устанавливаются одинаково, но на каждом круге цикла веса неправильно классифицированных по гипотезе $h_t$ примеров увеличиваются, таким образом, получают веса, которые относятся к сложным примерам.
+
+Основное теоретическое свойство AdaBoost --- это способность алгоритма уменьшать ошибку обучения \cite{Freund 1999}. Фройнд и Шапиро показали, что, так как каждая слабая гипотеза немного лучше случайного выбора, ошибка обучения уменьшается с экспоненциальной скоростью.
+
+В статье \cite{Freund 1999} показано как ограничена ошибка обобщения конечной гипотезы в терминах ошибки обучения, размера выборки m, VC размерности (размерности Вапника --- Червоненкиса \cite{Schapire 1997}) пространства слабых гипотез и количества циклов Т. Также получена граница, не зависящая от Т. Это показывает, что бустинг AdaBoost не подвержен эффекту переобучения.
+
+Так как ошибка обучения и ошибка обобщения ограничены, как показано в статье \cite{Freund 1999}, этот алгоритм действительно является бустинговым алгоритмом в том смысле, что он может эффективно преобразовать слабый алгоритм обучения в сильный, который может породить гипотезу со сколь угодно малой частотой ошибок, имея достаточное количество данных.
+
+После того, как авторы рассмотрели бинарный случай, где целью является различие лишь между двумя возможными классами, они переходят к рассмотрению мультиклассного, более приближенного к реальности. Есть несколько способов приведения AdaBoost к мультиклассному случаю. Самое простое обобщение называется AdaBoost.M1\cite{Freund 1997}, которое является приемлемым, если слабый обучаемый может достичь достаточно высокой точности на распределениях, созданных AdaBoost. Тем не менее, этот метод завершается неудачно, если слабый ученик не может достичь хотя бы 50\% точности при работе на этих  распределениях. Для такого случая было разработано несколько методов:
+
+\begin{enumerate}
+\item Методы, которые работают за счет преобразования мультиклассной задачи в большую бинарную задачу или в набор бинарных задач. Однако, эти методы требуют дополнительных усилий в разработке слабого алгоритма обучения.
+\item Технология, которая включает в себя метод Диттерича и Бакири --- метод выходных кодов, исправляющих ошибки \cite{Schapire 1997}.
+\end{enumerate}
+
+AdaBoost обладает определенными преимуществами. Его быстро и просто запрограммировать. Он не имеет никаких параметров для настройки, за исключением количества циклов. Он не требует никаких предварительных знаний о слабом обучаемом и поэтому может быть скомбинирован с любым методом для нахождения слабых гипотез.
+
+Недостатки метода заключаются в следующем. Фактическая производительность бустинга на конкретной задаче явно зависит от данных и слабого обучаемого. Теоретически, бустинг может выполниться плохо, если данных недостаточно, слабые гипотезы слишком сложные, или наоборот слишком слабые. Также бустинг особенно восприимчив к шуму.
+
+AdaBoost был протестирован эмпирическим путем многими исследователями. Например, Фройнд и Шапиро проверили AdaBoost на множестве эталонных наборов данных UCI \cite{Merz 1998} с использованием C4.5 \cite{Quinlan 1993} как слабого алгоритма обучения, а также алгоритм, который находит самое лучшее дерево решений с одним тестом. После проведения эксперимента был сделан вывод, что бустинг даже слабых деревьев решений с одним тестом, как правило, дает хорошие результаты, в то время как бустинг C4.5, как правило, дает алгоритм дерева принятия решений значительно улучшенной производительности.
+
+Почти во всех этих экспериментах и для всех показателей эффективности бустинг работает так же хорошо или значительно лучше, чем в других методах испытаний. Бустинг также применяется к фильтрации текстов, проблемам ранжирования и проблемам классификации, возникающих при обработке естественного языка.
 
 \section{Сравнительные эксперименты в WSD: роль предпочтений в машинном обучении}
 
@@ -236,6 +296,7 @@ product & продуктовая линия & The products or services sold by a
 \label{tbl5}
 \end{table}
 \efullwidth
+
 \parindent=0,5cm
 
 В работе \cite{Charles 1993} было установлено, что наиболее эффективными при решении задачи WSD являются алгоритмы на основе дерева решений (decision tree). Данный класс методов обходил по точности и скорости работы класс нейронных сетей. Другие исследования \cite{Mooney 1995} показали, что класс методов индуктивного логического программирования (inductive logic programming) справляется с задачей разрешения лексической многозначности слова лучше алгоритмов на основе дерева решений. 
@@ -927,6 +988,8 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 Разрешение лексической многозначности - это задача выбора между разными значениями слов и словосочетаний в словаре в зависимости от контекста. Задача разрешения лексической многозначности является открытой проблемой, то есть крайне интересной и привлекательной с научной точки зрения.
 
 В статье представлен краткий обзор методов и алгоритмов разрешения лексической многозначности. Во-первых, методы, основанные на машинном обучении.  Во-вторых, методы, не использующие никаких размеченных корпусов для различения значений слов. В-третьих, методы, использующие внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии).
+
+Работа Старковой В.Г., Кириллова А.Н. и Чирковой Ю.В. поддержана грантом РГНФ (проект № 15-04-12006). Работа Крижановского А. А. выполнена при частичной финансовой поддержке Программы фундаментальных исследований Секции литературы и языка ОИФН РАН «Язык  и информационные технологии» 2015-2017 (проект "Корпус вепсского языка: разработка и формирование морфологической базы электронного ресурса").
  
 \begin{thebibliography}{9}
 
@@ -940,7 +1003,10 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{А.~С.~Епрев.~}Применение контекстных векторов в классификации текстовых документов. 2010. http://jre.cplire.ru/iso/oct10/1/text.html.
 
 \bibitem{Lukash 2011}
-\textit{Н.~В.~Лукашевич.~} Тезаурусы в задачах информационного поиска. Издательство МГУ, 2011. 495 с.
+\textit{Н.~В.~Лукашевич.~}Тезаурусы в задачах информационного поиска. Издательство МГУ, 2011. 495 с.
+
+\bibitem{Trudakov 2010}
+\textit{Д.~Ю.~Турдаков.~}Методы и программные средства разрешения лексической многозначности терминов на основе сетей документов: диссертация ... кандидата физико-математических наук: 05.13.11. --- Москва, 2010. --- 138 c.
 
 \bibitem{Abney 1999}
 \textit{S.~Abney and M.~Light.~}Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
@@ -985,7 +1051,16 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{D.~T.~Duong.~}Automated text summarization. Graduation Thesis. Hanoi University. 2011. 
 
 \bibitem{Eugene 1975}
-\textit{Eugene A. Nida.~}Componential Analysis of Meaning. The Hague, Mouton. 1975. 
+\textit{Eugene A. Nida.~}Componential Analysis of Meaning. The Hague, Mouton. 1975.
+
+\bibitem{Freund 1999}
+\textit{Y.~Freund, R.~E.~Schapire.~}A Short Introduction to Boosting//AT\&T Labs Research, Shannon Laboratory. - 1999.
+
+\bibitem{Freund 1996}
+\textit{Y.~Freund, R.~E.~Schapire.~}Game theory, on-line prediction and boosting. In Proceedings of the Ninth Annual Conference on Computational Learning Theory,  1996. pp. 325-332.
+
+\bibitem{Freund 1997}
+\textit{Y.~Freund, R.~E.~Schapire.~}A decision-theoretic generalization of on-line learning and an application to boosting. Journal of Computer and System Sciences. 1997. pp. 119–139.
 
 \bibitem{Halliday Hasan 1976}
 \textit{M.~Halliday, and R.~Hasan.~}Cohesion in English. London: Longman. 1976. 
@@ -1023,6 +1098,9 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \bibitem{Manning 1999}
 \textit{C.~D.~Manning and H.~Sch\"utze.~}Foundations of Statistical Natural Language Processing. MIT Press. 1999.
 
+\bibitem{Merz 1998}
+\textit{C.~J.~Merz and P.~M.~Murphy.~}UCI repository of machine learning databases, 1998. www.ics.uci.edu/ mlearn/MLRepository.html.
+
 \bibitem{Miller 1990}
 \textit{G.~Miller.~}Wordnet: An on-line lexical database. International Journal of Lexicography, 3(4). 1990.
 
@@ -1054,9 +1132,17 @@ An Illustration of the Role of Bias in Machine Learning, Department of Computer 
 \bibitem{Resnik 1997}
 \textit{P.~Resnik.~}Selectional preference and sense disambiguation. In Proceedings of the ANLP-97 Workshop: Tagging Text with Lexical Semantics: Why, What, and How? 1997.
 
+\bibitem{Quinlan 1993}
+\textit{J.~R.~Quinlan.~}C4.5: Programs for Machine Learning. Morgan Kaufmann, 1993. 
+
 \bibitem{Savova 2005}
 \textit{G.~Savova.~}Resolving ambiguities in biomedical text with unsupervised clustering approaches. University of Minnesota Supercomputing Institute Research Report, 2005.
 
+\bibitem{Schapire 1998}
+\textit{R.~E.~Schapire and Y.~Singer.~}Improved boosting a predictions. In Proceedings of the Eleventh Annual Confere Theory, 1998. pp. 80–91. 
+
+\bibitem{Schapire 1997}
+\textit{R.~E.~Schapire.~}Using output codes to boost multiclass learning problems. InMachin Learning: Proceedings of the Fourteenth International Conference, 1997. pp. 313–321. 
 \bibitem{VERONIS 1990}
 \textit{J.~Veronis and N.~Ide.~}Word  sense  disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries – Proceedings of the 13th International Conference on Computational Linguistics. Helsinki. 1990. pp. 389–394.
 
@@ -1229,6 +1315,24 @@ e-mail: stark\_val@mail.ru
 \end{aboutauthors}
 
 \begin{aboutauthors}
+\authorsname{Степкина Татьяна Владимировна}
+Студентка\\
+Математический факультет\\ 
+Петрозаводский государственный университет\\
+пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+тел.: (8142) 711078\\
+эл. почта: hogdp@mail.ru
+
+\columnbreak
+
+\authorsname{Stepkina, Tatiana}
+Petrozavodsk State University\\
+33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+tel.: (8142) 711078\\
+e-mail: hogdp@mail.ru
+\end{aboutauthors}
+
+\begin{aboutauthors}
 \authorsname{Ткач Станислав Сергеевич}
 Студент\\
 Математический факультет\\ 
@@ -1244,6 +1348,23 @@ Petrozavodsk State University\\
 33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: tkachkras@gmail.com 
+\end{aboutauthors}
+
+\begin{aboutauthors}
+\authorsname{Чиркова Юлия Васильевна}
+кандидат физико-математических наук\\ 
+Институт прикладных математических исследований КарНЦ РАН\\ 
+ул. Пушкинская, 11, Петрозаводск, Республика Карелия, Россия, 185910\\
+тел.: (8142) 766312
+эл. почта: julia@krc.karelia.ru
+
+\columnbreak
+
+\authorsname{Chirkova, Julia}
+Institute of Applied Mathematical Research, Karelian Research Centre, Russian Academy of Sciences\\
+11 Pushkinskaya St., 185910 Petrozavodsk, Karelia, Russia\\
+tel.: (8142) 766312
+e-mail: julia@krc.karelia.ru
 \end{aboutauthors}
 
 \begin{aboutauthors}
